criação das divs, estilização dos containers, redmensionei a profile_photo, my fourth commit

--- a/index.html
+++ b/index.html
@@ -4,11 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Instagram</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="insta-wrapper">
+        <div class="insta_phone">
+            <img src="./img/instagram-celular.png" alt="telefone">
+        </div>
+        <div class="insta_continue">
+            <div class="group">
+                <img src="./img/instagram-logo.png" alt="insta_logo" class="insta_logo">
+                <div class="profile_photo">
+                    <img src="./img/WhatsApp Image 2020-08-31 at 21.21.21.jpeg" alt="profile_photo">
+                </div>
+                <a href="#" class="insta_login">Continue como _abreus_</a>
+                <a href="#" class="insta_logout">Remover conta</a>
+                <div class="group">
+                    <p class="not-account">Não é _abreus_?</p>
+                    <p class="not-account">
+                        <span class="link-blue">Alternar contas</span> ou
+                        <span class="link-blue">Inscreva-se</span>
+                    </p>
+                </div>
+                <div class="get_the_app">
+                    <p class="get_app">Baixe o aplicativo</p>
+                    <div class="download">
+                        <a href="#" class="app_download"></a>
+                        <a href="#" class="app_download"></a>
+                    </div>
+                </div>
+            </div>
+
 
 </body>
 
